crates/rome_formatter/tests/specs/prettier/typescript/error-recovery/generic.ts.snap
---
source: crates/rome_formatter/tests/prettier_tests.rs
assertion_line: 123
expression: generic.ts

---
# Input
```js
f1<>();

new f2<>();

function f3<>() {}

class f4 {
    constructor<>() {}
}

const f5 = function<>() {}

interface f6<> {
    test<>();
}

class f7<> {
    test<>() {}
}

```

# Output
```js
f1<>();

new f2<>();

function f3<>() {}

class f4 {
  
    constructor<>() {}
}

const f5 = function <>() {};

interface f6<> { test<>() }

class f7<> {
  test<>() {}
}

```

# Errors
```
error[SyntaxError]: constructors cannot have type parameters
  ┌─ generic.ts:8:16
  │
8 │     constructor<>() {}
  │                ^^


```


